@@ -1,3 +1,8 @@
+2011-05-11  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* osx-strip: Removed.
+	* configure.ac: Remove osx-strip.
+
 2011-05-10  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* osx-strip: New shell script to strip Mac OS X binaries.
